# lingua-symbolic-prompt-compiler

./: .gitignore  README.md  pyproject.toml  requirements-optional.txt
data/hf/: README.md  no_robots_100.jsonl  no_robots_one.jsonl  witfoo_soc_extraction_100.jsonl
docs/: architecture.md  optimization_math.tex
docs/experiments/: no_robots_llm_prompt_v3.md  soc_instruction_compression_generalization.md
examples/: inputs.jsonl  no_robots_prompt.txt  original_prompt.txt  soc_investigation_extraction_prompt.txt
examples/soc_generalization/: incident_metadata_contract.txt  incident_metadata_prose.txt  incident_metadata_runbook.txt  raw_signal_contract.txt  raw_signal_prose.txt  raw_signal_runbook.txt  scoped_investigation_contract.txt  scoped_investigation_prose.txt  scoped_investigation_runbook.txt
prompt_compiler/: __init__.py  cache.py  cli.py  hashing.py  tokenizer.py
prompt_compiler/candidates/: __init__.py  candidate.py  generation.py  genome.py
prompt_compiler/data/: __init__.py  dataset_builder.py  splits.py
prompt_compiler/eval/: __init__.py  contract_checks.py  embedding_distance.py  evaluator.py  extraction_metrics.py  llm_judge.py  pareto.py
prompt_compiler/models/: __init__.py  base.py  mock.py
prompt_compiler/operators/: __init__.py  llm_chunk_rewrite_prompt.txt  (+4 more)
scripts/: build_soc_generalization_suite.py  build_witfoo_extraction_dataset.py  download_instruction_dataset.py  evaluate_frozen_soc_candidate.py  run_soc_generalization_suite.py
tests/: test_evaluator_and_optimizer.py  test_rewrite_and_pareto.py  test_template_and_chunking.py
(+17 files in other folders)
